Fixed #32069 - Admin form layout broken at narrower browser widths in 3.1.2
Slight increase in responsive breakpoint due to odd looking help texts when navigation sidebar is expanded between 767px and 847px.

--- a/django/contrib/admin/static/admin/css/nav_sidebar.css
+++ b/django/contrib/admin/static/admin/css/nav_sidebar.css
@@ -107,7 +107,7 @@
     max-width: calc(100% - 299px);
 }
 
-@media (max-width: 767px) {
+@media (max-width: 847px) {
     #nav-sidebar, #toggle-nav-sidebar {
         display: none;
     }
